--- a/c09/ex01/Makefile
+++ b/c09/ex01/Makefile
@@ -12,7 +12,7 @@
 
 NAME = libft.a
 SRCS = srcs/ft_putchar.c srcs/ft_putstr.c srcs/ft_strcmp.c srcs/ft_strlen.c srcs/ft_swap.c
-OBJS = ${SRCS:.c=.o
+OBJS = ${SRCS:.c=.o}
 CFLAGS = -Wall -Wextra -Werror
 
 all: ${NAME}
